--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,10 +24,16 @@
 	<uses-permission android:name="android.permission.CAMERA" />
 	<uses-permission android:name="android.permission.INTERNET" />
 	<uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 	<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
-
+	
+	<queries>
+		<intent>
+			<action android:name="android.intent.action.PICK" />
+			<data android:mimeType="image/jpeg" />
+		</intent>
+	</queries>
+	
 	<application
 		android:name=".core.RooveApp"
 		android:allowBackup="true"
