--- a/data/build.gradle
+++ b/data/build.gradle
@@ -81,4 +81,6 @@ dependencies {
 	implementation "com.google.dagger:hilt-android:2.30.1-alpha"
 	kapt "com.google.dagger:hilt-android-compiler:2.30.1-alpha"
 
+	implementation 'com.github.delight-im:Android-SimpleLocation:v1.1.0'
+
 }
