--- a/data/src/main/AndroidManifest.xml
+++ b/data/src/main/AndroidManifest.xml
@@ -16,4 +16,12 @@
   ~ along with this program.  If not, see https://www.gnu.org/licenses
   -->
 
-<manifest package="com.mmdev.data"/>
+<manifest package="com.mmdev.data"
+	xmlns:android="http://schemas.android.com/apk/res/android"
+	>
+	
+	<uses-permission android:name="android.permission.INTERNET" />
+	<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+	
+</manifest>
