--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,13 +26,13 @@ apply plugin: 'dagger.hilt.android.plugin'
 
 android {
 
-	compileSdkVersion 30
-	buildToolsVersion "30.0.3"
+	compileSdkVersion 31
+	buildToolsVersion "31.0.0"
 
 	defaultConfig {
 		applicationId "com.mmdev.roove"
 		minSdkVersion 21
-		targetSdkVersion 30
+		targetSdkVersion 31
 		versionCode "$majorVersion$minorVersion$patchVersion".toInteger()
 		versionName "$majorVersion.$minorVersion.$patchVersion"
 		//testInstrumentationRunner globalConfiguration["testInstrumentationRunner"]
@@ -54,15 +54,6 @@ android {
 		}
 	}
 
-	compileOptions {
-		sourceCompatibility = JavaVersion.VERSION_1_8
-		targetCompatibility = JavaVersion.VERSION_1_8
-	}
-
-	kotlinOptions {
-		jvmTarget = JavaVersion.VERSION_1_8
-	}
-
 	buildFeatures {
 		dataBinding = true
 	}
@@ -82,23 +73,23 @@ dependencies {
 	implementation project(':data')
 
 	//core
-	implementation ('androidx.core:core-ktx:1.5.0-alpha05')
+	implementation ('androidx.core:core-ktx:1.8.0-alpha03')
 	implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
-	implementation 'androidx.constraintlayout:constraintlayout:2.1.0-alpha2'
-	implementation 'com.google.android.material:material:1.3.0-beta01'
-	implementation ('androidx.lifecycle:lifecycle-process:2.3.0-rc01')
+	implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
+	implementation 'com.google.android.material:material:1.6.0-alpha02'
+	implementation ('androidx.lifecycle:lifecycle-process:2.5.0-alpha01')
 
 	// dagger hilt
-	implementation ("com.google.dagger:hilt-android:2.30.1-alpha")
-	kapt "com.google.dagger:hilt-android-compiler:2.30.1-alpha"
-	implementation 'androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha02'
-	kapt 'androidx.hilt:hilt-compiler:1.0.0-alpha02'
+	implementation ("com.google.dagger:hilt-android:2.40.1")
+	kapt "com.google.dagger:hilt-android-compiler:2.40.1"
+	implementation 'androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha03'
+	kapt 'androidx.hilt:hilt-compiler:1.0.0'
 
 	//custom UI
 	implementation ('com.github.chrisbanes:PhotoView:2.3.0')
 
 	//firebase
-	implementation platform('com.google.firebase:firebase-bom:26.2.0')
+	implementation platform('com.google.firebase:firebase-bom:29.0.4')
 	implementation 'com.google.firebase:firebase-auth-ktx'
 	implementation 'com.google.firebase:firebase-firestore-ktx'
 	implementation 'com.google.firebase:firebase-storage-ktx'
@@ -108,7 +99,7 @@ dependencies {
 
 
 	//facebook auth
-	implementation 'com.facebook.android:facebook-login:8.2.0'
+	implementation 'com.facebook.android:facebook-login:12.3.0'
 
 	//glide
 	implementation 'com.github.bumptech.glide:glide:4.11.0'
@@ -119,8 +110,8 @@ dependencies {
 
 
 	// Navigation component
-	implementation "androidx.navigation:navigation-ui-ktx:2.3.2"
-	implementation "androidx.navigation:navigation-fragment-ktx:2.3.2"
+	implementation "androidx.navigation:navigation-ui-ktx:2.4.0"
+	implementation "androidx.navigation:navigation-fragment-ktx:2.4.0"
 
 	// RxJava
 	implementation "io.reactivex.rxjava3:rxjava:3.0.9"
