--- a/build.gradle
+++ b/build.gradle
@@ -19,7 +19,7 @@
 buildscript {
 
 	ext {
-		kotlin_version = '1.4.21'
+		kotlin_version = '1.6.10'
 		majorVersion = 2
 		minorVersion = 0
 		patchVersion = 1
@@ -27,15 +27,14 @@ buildscript {
 
 
 	dependencies {
-		classpath 'com.android.tools.build:gradle:4.1.1'
-		classpath 'com.google.gms:google-services:4.3.4'
+		classpath 'com.android.tools.build:gradle:7.1.1'
+		classpath 'com.google.gms:google-services:4.3.10'
 		classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-		classpath 'com.google.firebase:firebase-crashlytics-gradle:2.4.1'
-		classpath 'com.google.dagger:hilt-android-gradle-plugin:2.30.1-alpha'
+		classpath 'com.google.firebase:firebase-crashlytics-gradle:2.8.1'
+		classpath 'com.google.dagger:hilt-android-gradle-plugin:2.40.1'
 	}
 
 	repositories {
-		jcenter()
 		google()
 		mavenCentral()
 	}
@@ -45,7 +44,6 @@ buildscript {
 allprojects {
 
 	repositories {
-		jcenter()
 		google()
 		mavenCentral()
 		maven { url 'https://jitpack.io' }
