--- a/data/build.gradle
+++ b/data/build.gradle
@@ -22,8 +22,8 @@ apply plugin: 'kotlin-kapt'
 
 android {
 
-	compileSdkVersion 30
-	buildToolsVersion "30.0.3"
+	compileSdkVersion 31
+	buildToolsVersion "31.0.0"
 
 	def keyPropertiesFile = rootProject.file("key.properties")
 	def keyProperties = new Properties()
@@ -33,9 +33,7 @@ android {
 		buildConfigField("String", "FIREBASE_STORAGE_URL", keyProperties['FIREBASE_STORAGE_URL'])
 
 		minSdkVersion 21
-		targetSdkVersion 30
-		versionCode "$majorVersion$minorVersion$patchVersion".toInteger()
-		versionName "$majorVersion.$minorVersion.$patchVersion"
+		targetSdkVersion 31
 		//testInstrumentationRunner globalConfiguration["testInstrumentationRunner"]
 	}
 
@@ -46,10 +44,6 @@ android {
 			proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
 		}
 
-	}
-
-	kotlinOptions {
-		jvmTarget = JavaVersion.VERSION_1_8
 	}
 
 }
@@ -75,8 +69,8 @@ dependencies {
 	implementation "io.reactivex.rxjava3:rxjava:3.0.9"
 
 	// Dagger hilt
-	implementation "com.google.dagger:hilt-android:2.30.1-alpha"
-	kapt "com.google.dagger:hilt-android-compiler:2.30.1-alpha"
+	implementation "com.google.dagger:hilt-android:2.40.1"
+	kapt "com.google.dagger:hilt-android-compiler:2.40.1"
 
 	implementation 'com.github.delight-im:Android-SimpleLocation:v1.1.0'
 
